# arete-select

./: .gitignore  .replit  Dockerfile  app.py  pyproject.toml  vercel.json
Arete Select/: main.py  requirements
api/: healthz.py  index.py
