[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.1",
    "gspread>=6.2.1",
    "markupsafe>=3.0.2",
    "oauth2client>=4.1.3",
    "openai>=1.99.3",
    "pandas>=2.3.1",
    "streamlit>=1.48.0",
]
